@@ -1,3 +1,8 @@
+2020-10-15  Niels Möller  <nisse@lysator.liu.se>
+
+	* testsuite/ecc-modinv-test.c (test_modulo): Allow invert function
+	to return a non-canonical representation.
+
 2020-11-08  Niels Möller  <nisse@lysator.liu.se>
 
 	Merge refactoring of ecc modulo and reduce functions.
